@@ -201,6 +201,7 @@
 ])
 
 (define_c_enum "unspecv" [
+  UNSPECV_UD2
   UNSPECV_BLOCKAGE
   UNSPECV_STACK_PROBE
   UNSPECV_PROBE_STACK_RANGE
@@ -18596,6 +18597,18 @@
 ;; Keeping with tradition, "6" is in honor of #UD.
 (define_insn "trap"
   [(trap_if (const_int 1) (const_int 6))]
+  ""
+{
+#ifdef HAVE_AS_IX86_UD2
+  return "ud2";
+#else
+  return ASM_SHORT "0x0b0f";
+#endif
+}
+  [(set_attr "length" "2")])
+
+(define_insn "ud2"
+  [(unspec_volatile [(const_int 0)] UNSPECV_UD2)]
   ""
 {
 #ifdef HAVE_AS_IX86_UD2
