@@ -1,3 +1,8 @@
+2017-08-02  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/81644
+	* gcc.target/i386/pr81644.c: New test.
+
 2017-08-02  Tom de Vries  <tom@codesourcery.com>
 
 	* gcc.dg/Walloca-14.c: Use relative line number.
