@@ -1,3 +1,11 @@
+2017-08-02  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/81644
+	* config/i386/i386.md (unspecv): Add UNSPECV_UD2.
+	(ud2): New insn pattern.
+	* config/i386/i386.c (ix86_expand_epilogue):
+	Generate ud2 instead of trap insn.
+
 2017-08-02  Marek Polacek  <polacek@redhat.com>
 
 	PR other/81667
